patters extension moved to new api